--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.18.1",
+    "react-test-renderer": "^17.0.2",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
